@@ -97,7 +97,10 @@
       which features LIMIT/OFFSET.  oracle dialect needs to modify
       the object to have ROW_NUMBER OVER and wasn't performing 
       the full series of steps on successive compiles.
-
+- mysql
+    - support for SSL arguments given as inline within URL query string,
+      prefixed with "ssl_", courtesy terjeros@gmail.com.
+      
 0.3.6
 - sql:
     - bindparam() names are now repeatable!  specify two
